--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ display: none;
 /* hero section */
 
 #hero{
-    background-image: url(img/hero4.png);
+    background-image: url(./img/hero4.png);
     height: 90vh;
     width: 100%;
     background-size: cover;
