--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ color: #088178;
 }
 
 #hero button{
-    background-image: url(/img/button.png);
+    background-image: url(./img/button.png);
     color: #088178;
     background-color: transparent;
     border: 0;
