--- a/style.css
+++ b/style.css
@@ -159,6 +159,7 @@ display: none;
   top: 50%;
   right: 10px;
   z-index: 99;
+  padding-top:5px;
 }
 
 /* hero section */
@@ -1071,6 +1072,7 @@ border: 1px solid #e2e9e1;
   position: absolute;
   top: 50%;
   right: 10px;
+  padding-top:5px;
 }
   #navbar.active{
     right: 0px;
