--- a/style.css
+++ b/style.css
@@ -230,7 +230,7 @@ display: inline-block;
 #feature{
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
   flex-wrap: wrap;
 }
 
@@ -1350,3 +1350,12 @@ flex-direction: column;
 }
 
 }
+
+@media(max-width:660px){
+
+  #product1 .pro-container{
+    justify-content: center;
+  }
+}
+
+
