--- a/style.css
+++ b/style.css
@@ -269,7 +269,7 @@ display: inline-block;
 
 #product1 .pro-container{
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   flex-wrap: wrap;
   padding-top: 20px;
 }
@@ -1351,11 +1351,16 @@ flex-direction: column;
 
 }
 
-@media(max-width:660px){
+@media(min-width:799px) and (max-width:1130px ){
 
-  #product1 .pro-container{
-    justify-content: center;
+  #sm-banner .banner-box{
+    margin-bottom: 30px;
+  }
+  #banner3{
+    flex-wrap: nowrap;
+  }
+  #banner3 .banner-box{
+    margin: 5px;
   }
 }
-
 
